Try some java 12 switch expressions