@@ -8,7 +8,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>12</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.1.0.M4</spring.boot.version>
     </properties>
@@ -74,6 +74,7 @@
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
+                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                     <dependencies>
                         <dependency>
